--- a/client/css/style.css
+++ b/client/css/style.css
@@ -122,7 +122,7 @@ body {
 .slots {
   list-style: none;
   font-size: 0;
-  padding: 10px 15px;
+  padding: 10px 10%;
   margin-bottom: 20px;
   background: transparent; }
   .slots li {
@@ -149,26 +149,46 @@ body {
   cursor: pointer; }
 
 .win {
-  margin: 30px 0 20px;
+  margin: 20px 0 10px;
   padding: 10px;
-  font-size: 40px;
+  font-size: 35px;
   line-height: 1; }
 
 .bonus {
   margin: 0 0 10px;
   padding: 5px 10px;
-  font-size: 30px;
+  font-size: 25px;
   line-height: 1;
-  height: 40px; }
+  height: 35px;
+  color: #78be20; }
+
+footer {
+  margin: 60px 0 10px; }
+
+.authorInfo, .sourceCodes {
+  text-align: center;
+  color: #959da2;
+  font-size: 16px;
+  padding: 5px 10px; }
+
+.author, .bitbucket {
+  padding: 5px;
+  margin: 10px auto;
+  font-size: 16px;
+  color: #959da2;
+  text-decoration: none;
+  cursor: pointer; }
+
+@media (max-width: 768px) {
+  .win {
+    font-size: 30px;
+    margin: 10px 10px; }
+  .bonus {
+    font-size: 20px;
+    height: 30px; } }
 
 @media (max-width: 543px) {
   .slots {
     padding: 10px 5px; }
     .slots li {
-      padding: 5px; }
-  .win {
-    font-size: 30px;
-    margin: 15px 10px; }
-  .bonus {
-    font-size: 20px;
-    height: 30px; } }
+      padding: 5px; } }
